--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -1,10 +1,12 @@
 .background {
     background-color: #171722;
 }
+
 .box {
     background: #212130;
     border-radius: 20px;
 }
+
 .main_entry_field {
     background: #434461;
     border-radius: 60px;
@@ -17,11 +19,21 @@
     font-size: 20px;
     line-height: 26px;
     color: #6E78A8;
+    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
+    box-shadow: 0px 0px 20px -18px;
 }
 
 .main_entry_field:hover {
-    border-color: #13131A;
-    background-color: #212130;
+    border: 2px solid #6E78A8;
+    box-shadow: 0px 0px 20px -17px;
+}
+
+.main_entry_field:active {
+    transform: scale(0.99);
+}
+
+.main_entry_field:focus {
+    border: 2px solid #7AA2F7;
 }
 
 .welcome_to_the_dark {
@@ -36,34 +48,54 @@
 .log_in_button {
     background: #13131A;
     border-radius: 60px;
-    border-color: #13131A;
-    outline:none;
+    outline: none;
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
     color: #B1BAE6;
+    transition: all 0.3s ease-in-out;
+    outline-color: transparent;
+    border-color: transparent;
+    box-shadow: none;
 }
 
 .log_in_button:hover {
-    background-color: #171722;
+    transform: translateY(-4px) translateX(-2px);
+    box-shadow: 2px 5px 0 0 #565F89;
 }
+
+.log_in_button:active {
+    transform: translateY(2px) translateX(1px);
+    box-shadow: 0 0 0 0 #565F89;
+}
+
 .sign_up_button_registration {
     background: #13131A;
     border-radius: 60px;
     border-color: #13131A;
-    outline:none;
+    outline: none;
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
     color: #B1BAE6;
+    transition: all 0.3s ease-in-out;
+    outline-color: transparent;
+    border-color: transparent;
+    box-shadow: none;
 }
 
 .sign_up_button_registration:hover {
-    background-color: #171722;
+    transform: translateY(-4px) translateX(-2px);
+    box-shadow: 2px 5px 0 0 #565F89;
+}
+
+.sign_up_button_registration:active {
+    transform: translateY(2px) translateX(1px);
+    box-shadow: 0 0 0 0 #565F89;
 }
 
 .dont_have_account {
@@ -140,11 +172,26 @@
     border-radius: 20px;
 }
 
+.main_box_style_blurred {
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+    filter: blur(5px);
+}
+
 .current_dirrect_message_box {
     background: #171722;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
+
+.current_dirrect_message_box_blurred {
+    background: #171722;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+    filter: blur(5px);
+}
+
 
 
 .profile_avatar_btn {
@@ -152,22 +199,45 @@
     background-position: 100% 100%;
     background-repeat: no-repeat;
     background-image: url(../../resources/images/test_avatar1.jpg);
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 }
 
+
+.profile_avatar_btn:hover {
+    border-width: 2px;
+    border-color: #7AA2F7;
+    transition: 0.5s;
+}
+
+.profile_avatar_btn:active {
+    transform: scale(0.9);
+}
+
+
 .home_btn {
-    border-color: transparent;
-    background: transparent;
+    border: none;
+    border-radius: 10px;
+    background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/home_btn.png);
+    background-image: url(../../resources/images/home_btn.svg);
+    background-color: #4A4A66;
     background-position: center;
     outline-color: transparent;
-    border-color: transparent;
     box-shadow: none;
+}
+
+.home_btn:hover {
+    background-color: #4A4A66;
+    transition: 0.5s;
+}
+
+.home_btn:active {
+    transform: scale(0.7);
 }
 
 
 .chats_btn {
+    border: none;
+    border-radius: 10px;
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
@@ -178,7 +248,18 @@
     box-shadow: none;
 }
 
+.chats_btn:hover {
+    background-color: #4A4A66;
+    transition: 0.5s;
+}
+
+.chats_btn:active {
+    transform: scale(0.7);
+}
+
 .settings_btn {
+    border: none;
+    border-radius: 10px;
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
@@ -189,7 +270,18 @@
     box-shadow: none;
 }
 
+.settings_btn:hover {
+    background-color: #4A4A66;
+    transition: 0.5s;
+}
+
+.settings_btn:active {
+    transform: scale(0.7);
+}
+
 .achievements_btn {
+    border: none;
+    border-radius: 10px;
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
@@ -200,7 +292,19 @@
     box-shadow: none;
 }
 
+.achievements_btn:hover {
+    background-color: #4A4A66;
+    transition: 0.5s;
+}
+
+.achievements_btn:active {
+    transform: scale(0.7);
+}
+
+
 .log_out_btn {
+    border: none;
+    border-radius: 10px;
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
@@ -211,23 +315,57 @@
     box-shadow: none;
 }
 
+.log_out_btn:hover {
+    background-color: #4A4A66;
+    transition: 0.5s;
+}
+
+.log_out_btn:active {
+    transform: scale(0.7);
+}
+
+
+.search_bar_box {
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+
+.search_bar_box_blurred {
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+    filter: blur(5px);
+}
+
+.search_bar_box:active {
+    transform: scale(0.99);
+}
+
+.search_bar_box:focus {
+    border: 2px solid #7AA2F7;
+}
+
+
 .search_btn {
     border-color: transparent;
     background: transparent;
-    background-repeat: no-repeat;
     background-image: url(../../resources/images/search_btn.png);
+    background-repeat: no-repeat;
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
     box-shadow: none;
+    transition: all 0.3s ease 0s;
+    outline: none;
 }
+
 .entry_for_search {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
-    /* identical to box height */
     color: #7AA2F7;
     border-color: transparent;
     background: transparent;
@@ -236,6 +374,7 @@
     border-color: transparent;
     box-shadow: none;
 }
+
 .groups_label {
     font-family: 'Open Sans';
     font-style: normal;
@@ -246,18 +385,24 @@
 }
 
 .create_new_group_btn {
-    background: #202332;
-    border-radius: 20px;
-    font-family: 'Open Sans';
-    color: #7AA2F7;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 14px;
-    box-shadow: none;
+    border-color: transparent;
+    background: transparent;
+    background-image: url(../../resources/images/create.png);
+    background-repeat: no-repeat;
+    background-position: center;
     outline-color: transparent;
     border-color: transparent;
+    box-shadow: none;
+    transition: all 0.3s ease 0s;
+    outline: none;
+}
 
+.create_new_group_btn:hover {
+    transform: translateY(-7px);
+}
+
+.create_new_group_btn:active {
+    transform: translateY(-1px);
 }
 
 .chats_label {
@@ -270,30 +415,122 @@
 }
 
 .create_new_chat_btn {
-    background: #202332;
-    border-radius: 20px;
-    font-family: 'Open Sans';
-    color: #7AA2F7;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 14px;
-    box-shadow: none;
+    border-color: transparent;
+    background: transparent;
+    background-image: url(../../resources/images/create.png);
+    background-repeat: no-repeat;
+    background-position: center;
     outline-color: transparent;
     border-color: transparent;
+    box-shadow: none;
+    transition: all 0.3s ease 0s;
+    outline: none;
 }
 
-.select_chat_or_group_label {
-    background: #13131A;
+.create_new_chat_btn:hover {
+    transform: translateY(-7px);
+}
+
+.create_new_chat_btn:active {
+    transform: translateY(-1px);
+}
+
+.lets_start {
+    padding: 10px 20px;
+    border: none;
+    font-size: 17px;
+    color: #fff;
+    border-radius: 7px;
+    letter-spacing: 4px;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.5s;
+    transition-property: box-shadow;
+    background: #7AA2F7;
+    box-shadow: 0 0 25px #647295;
+}
+
+.lets_start:hover {
+    box-shadow: 0 0 5px #6582C8,
+        0 0 25px #647295,
+        0 0 50px #6582C8,
+        0 0 100px #647295;
+}
+
+.lets_start:active {
+    transform: translateY(-1px);
+}
+
+.log_out_box {
+    background: #212130;
+    /*border: 1px solid rgba(122, 162, 247, 0.35);*/
     border-radius: 20px;
-    font-family: 'Open Sans';
-    color: #7AA2F7;
+}
+
+.log_out_label {
+    font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
-    font-size: 10px;
-    line-height: 14px;
-    box-shadow: none;
+    font-size: 30px;
+    line-height: 40px;
+    color: #B1BAE6;
+}
+
+.yes_btn {
+    font-family: 'JetBrains Mono';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #B1BAE6;
+    border: 2px solid #434461;
+    border-radius: 60px;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    background-color: transparent;
+    background: transparent;
     outline-color: transparent;
-    border-color: transparent;
-    
+    outline: none;
+    box-shadow: none;
+}
+
+.yes_btn:hover {
+    color: #B1BAE6;
+    background-color: #434461;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.yes_btn:active {
+    box-shadow: none;
+    transform: translateY(0);
+}
+
+.no_btn {
+    font-family: 'JetBrains Mono';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #B1BAE6;
+    border: 2px solid #13131A;
+    border-radius: 60px;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    background-color: transparent;
+    background: transparent;
+    outline-color: transparent;
+    outline: none;
+    box-shadow: none;
+}
+
+
+.no_btn:hover {
+    color: #B1BAE6;
+    background-color: #13131A;
+    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+    transform: translateY(-2px);
+}
+
+.no_btn:active {
+    box-shadow: none;
+    transform: translateY(0);
 }
