--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -423,8 +423,8 @@
     outline-color: transparent;
     border-color: transparent;
     box-shadow: none;
-    transition: all 0.3s ease 0s;
     outline: none;
+    transition: all 0.3s ease 0s;
 }
 
 .create_new_chat_btn:hover {
@@ -533,4 +533,76 @@
 .no_btn:active {
     box-shadow: none;
     transform: translateY(0);
+}
+
+.achievements_box {
+    background: #171722;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+
+.achievements_icon_btn {
+    border: none;
+    border-radius: 50%;
+    background: none;
+    background-repeat: no-repeat;
+    background-image: url(../../resources/images/achievements_icon_btn.png);
+    background-color: transparent;
+    background-position: 100% 100%;
+    outline-color: transparent;
+    box-shadow: none;
+}
+
+.achievements_label_btn {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    color: #B1BAE6;
+    font-size: 1.1em;
+    background: #171717;
+    box-shadow: none;
+    border: none;
+    border-radius: 15px;
+    transition: all .4s;
+    outline-color: transparent;
+    outline: none;
+}
+
+.achievements_label_btn:hover {
+    border-radius: 15px;
+    transform: translateY(-10px);
+    box-shadow: 0 15px 0 -4px #39a2db,
+        0 16px 10px -3px #39a2db,
+        0 7px 0 -2px #EEEEFF;
+}
+
+.achievements_label_btn:active {
+    transition: all 0.2s;
+    transform: translateY(-5px);
+    box-shadow: 0 2px 0 -2px #EEEEFF,
+        0 8px 0 -4px #39a2db,
+        0 12px 10px -3px #39a2db;
+}
+
+.first_hbox {
+    background: #171722;
+}
+
+.achievement_card {
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+    transition: border-radius cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
+                 transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+}
+
+.achievement_card:hover {
+    border-bottom-right-radius: 50px;
+    border-top-left-radius: 50px;
+    transform: scale(1.05);
+}
+
+.second_hbox {
+    background: #171722;
 }
