styles some changes

--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -166,6 +166,16 @@
     box-shadow: none;
 }
 
+.grid_margins {
+    margin: 45px 35px 28px;
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+.chats_container {
+    margin: 45px 35px 28px;
+}
+
 .main_box_style {
     background: #13131A;
     border: 1px solid rgba(122, 162, 247, 0.35);
