--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -166,6 +166,16 @@
     box-shadow: none;
 }
 
+.grid_margins {
+    margin: 45px 35px 28px;
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+.chats_container {
+    margin: 45px 35px 28px;
+}
+
 .main_box_style {
     background: #13131A;
     border: 1px solid rgba(122, 162, 247, 0.35);
@@ -423,8 +433,8 @@
     outline-color: transparent;
     border-color: transparent;
     box-shadow: none;
-    outline: none;
     transition: all 0.3s ease 0s;
+    outline: none;
 }
 
 .create_new_chat_btn:hover {
@@ -536,6 +546,7 @@
 }
 
 .achievements_box {
+    margin: 45px 35px 28px;
     background: #171722;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
