--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -172,8 +172,42 @@
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
+
+.left_menu_bar {
+    margin: 46px 22px 47px 23px;
+}
+
 .chats_container {
-    margin: 45px 35px 28px;
+    margin: 46px 22px 47px 0px;
+}
+
+.home {
+    margin: 46px 0px 47px 0px;
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+
+.three_rows_container {
+    margin: 0px 24px 0px 0px;
+}
+
+.mini_groups {
+    margin: 19px 0px 20px 0px;
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+
+.mini_chats {
+    margin: 0px 0px 0px 0px;
+    background: #13131A;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+    border-radius: 20px;
+}
+
+.chats {
+    margin: 0px 0px 0px 0px;
 }
 
 .main_box_style {
@@ -358,15 +392,14 @@
 
 
 .search_btn {
-    border-color: transparent;
-    background: transparent;
+    border: none;
+    background: none;
     background-image: url(../../resources/images/search_btn.png);
     background-repeat: no-repeat;
     background-position: center;
     outline-color: transparent;
-    border-color: transparent;
+    border-color: #7AA2F7;
     box-shadow: none;
-    transition: all 0.3s ease 0s;
     outline: none;
 }
 
@@ -546,7 +579,7 @@
 }
 
 .achievements_margin {
-    margin: 45px 35px 28px;
+    margin: 45px 21px 48px 23px;
 }
 .achievements_box {
     background: #171722;
@@ -555,13 +588,14 @@
 }
 
 .achievements_icon_btn {
-    border: none;
+    
+    border-color: #0269A4;
     border-radius: 50%;
     background: none;
     background-repeat: no-repeat;
     background-image: url(../../resources/images/achievements_icon_btn.png);
     background-color: transparent;
-    background-position: 100% 100%;
+    background-position: center;
     outline-color: transparent;
     box-shadow: none;
 }
