--- a/resources/style/blue_theme.css
+++ b/resources/style/blue_theme.css
@@ -1,7 +1,7 @@
 /*LOG_IN and REGISTRATION START*/
 
 .background {
-    background-color: #171722;
+    background-color: blue;
 }
 
 .auth_main_box {
@@ -434,9 +434,9 @@
 
 .lets_start:hover {
     box-shadow: 0 0 5px #6582C8,
-        0 0 25px #647295,
-        0 0 50px #6582C8,
-        0 0 100px #647295;
+    0 0 25px #647295,
+    0 0 50px #6582C8,
+    0 0 100px #647295;
 }
 
 .lets_start:active {
@@ -562,16 +562,16 @@
     border-radius: 15px;
     transform: translateY(-10px);
     box-shadow: 0 15px 0 -4px #39a2db,
-        0 16px 10px -3px #39a2db,
-        0 7px 0 -2px #EEEEFF;
+    0 16px 10px -3px #39a2db,
+    0 7px 0 -2px #EEEEFF;
 }
 
 .achievements_label_btn:active {
     transition: all 0.2s;
     transform: translateY(-5px);
     box-shadow: 0 2px 0 -2px #EEEEFF,
-        0 8px 0 -4px #39a2db,
-        0 12px 10px -3px #39a2db;
+    0 8px 0 -4px #39a2db,
+    0 12px 10px -3px #39a2db;
 }
 
 .first_hbox {
@@ -583,7 +583,7 @@
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
     transition: border-radius cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
-                 transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+    transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 }
 
 .achievement_card:hover {
