--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -282,6 +282,39 @@
     border-radius: 20px;
 }
 
+.chats_list_grid {
+    /*border: 1px solid green;*/
+    margin: 0px 20px 10px 20px;
+}
+
+.chat_line {
+    border-radius: 20px;
+    border: 1px solid rgba(122, 162, 247, 0.35);
+}
+
+.avatar_grid {
+    border-radius: 50%;
+}
+
+.chat_username {
+    color: #B1BAE6;
+    font-family: 'Open Sans';
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.chat_message {
+    color: #B1BAE6;
+    font-family: 'Open Sans';
+    font-size: 12px;
+    line-height: 24px;
+}
+
+.chat_line {
+    margin: 5px 0px;
+}
+
+
 .chats {
     background: #171722;
     border: 1px solid rgba(122, 162, 247, 0.35);
@@ -584,7 +617,7 @@
 }
 
 .settings_grid_help {
-    margin: 29px 268px 18px 268px;
+    margin: 29px 266px 18px 266px;
 }
 
 .settings_grid_for_ico {
