--- a/resources/style/purple_theme.css
+++ b/resources/style/purple_theme.css
@@ -1,32 +1,32 @@
 /*LOG_IN and REGISTRATION START*/
 
 .background {
-    background-color: #3e3b75;
+    background-color: #341948;
 }
 
 .auth_main_box {
-    background: #4C498F;
+    background: #8155BA;
     border-radius: 20px;
 }
 
 .auth_entry_field {
-    background: #6762C2;
+    background: #A16AE8;
     border-radius: 60px;
     border-style: solid;
-    border-color: #DAD3FF;
+    border-color: #A16AE8;
     outline: none;
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B4A8FF;
+    color: #E6E6FA;
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
     box-shadow: 0px 0px 20px -18px;
 }
 
 .auth_entry_field:hover {
-    border: 2px solid #DAD3FF;
+    border: 2px solid #E6E6FA;
     box-shadow: 0px 0px 20px -17px;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .auth_entry_field:focus {
-    border: 2px solid #DAD3FF;
+    border: 2px solid #E6E6FA;
 }
 
 .auth_welcome_to_the_dark {
@@ -44,7 +44,7 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
-    color: #DAD3FF;
+    color: #E6E6FA;
 }
 
 .auth_button {
@@ -56,7 +56,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #DAD3FF;
+    color: #E6E6FA;
     transition: all 0.3s ease-in-out;
     outline-color: transparent;
     border-color: transparent;
@@ -79,7 +79,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
-    color: #DAD3FF;
+    color: #E6E6FA;
 }
 
 .auth_sign_button {
@@ -101,7 +101,7 @@
     border-color: transparent;
     background: transparent;
     text-decoration-line: underline;
-    color: #DAD3FF;
+    color: #E6E6FA;
     outline-color: transparent;
     border-color: transparent;
     box-shadow: none;
@@ -113,8 +113,8 @@
 /*HOME START*/
 .home {
     margin: 46px 0px 47px 0px;
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 /*HOME END*/
@@ -124,22 +124,26 @@
 /*LEFT MENU BAR START*/
 .left_menu_bar {
     margin: 46px 22px 47px 23px;
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
 .profile_avatar_btn {
     border-radius: 50%;
-    background-position: 100% 100%;
+    border-width: 2px;
+    border-color: transparent;
     background-repeat: no-repeat;
     background-image: url(../../resources/images/test_avatar1.jpg);
+    background-position: center;
+    border-color: transparent;
+    box-shadow: none;
 }
 
 
 .profile_avatar_btn:hover {
     border-width: 2px;
-    border-color: #7AA2F7;
+    border-color: #C55FFC;
     transition: 0.5s;
 }
 
@@ -153,15 +157,15 @@
     border-radius: 10px;
     background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/home_btn.svg);
-    background-color: #4A4A66;
+    background-image: url(../../resources/images/home_btn_purple.png);
+    background-color: #7954A1;
     background-position: center;
     outline-color: transparent;
     box-shadow: none;
 }
 
 .home_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -176,7 +180,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/chats_btn.png);
+    background-image: url(../../resources/images/chats_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -184,7 +188,7 @@
 }
 
 .chats_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -198,7 +202,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/settings_btn.png);
+    background-image: url(../../resources/images/settings_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -206,7 +210,7 @@
 }
 
 .settings_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -220,7 +224,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/achievements_btn.png);
+    background-image: url(../../resources/images/achievements_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -228,7 +232,7 @@
 }
 
 .achievements_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -243,7 +247,7 @@
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/log_out_btn.png);
+    background-image: url(../../resources/images/log_out_btn_purple.png);
     background-position: center;
     outline-color: transparent;
     border-color: transparent;
@@ -251,7 +255,7 @@
 }
 
 .log_out_btn:hover {
-    background-color: #4A4A66;
+    background-color: #7954A1;
     transition: 0.5s;
 }
 
@@ -268,8 +272,8 @@
 }
 
 .mini_groups_grid {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 .mini_groups_box {
@@ -277,8 +281,8 @@
 }
 
 .mini_chats {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
@@ -289,7 +293,7 @@
 
 .chat_line {
     border-radius: 20px;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
 }
 
 .avatar_grid {
@@ -297,14 +301,14 @@
 }
 
 .chat_username {
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-family: 'Open Sans';
     font-size: 14px;
     line-height: 24px;
 }
 
 .chat_message {
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-family: 'Open Sans';
     font-size: 12px;
     line-height: 24px;
@@ -316,34 +320,34 @@
 
 
 .chats {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
 .main_box_style_blurred {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     filter: blur(5px);
 }
 
 .current_dirrect_message_box {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
 .current_dirrect_message_box_blurred {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     filter: blur(5px);
 }
 
 .search_bar_grid {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
@@ -353,8 +357,8 @@
 }
 
 .search_bar_box_blurred {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     filter: blur(5px);
 }
@@ -364,18 +368,18 @@
 }
 
 .search_bar_box:focus {
-    border: 2px solid #7AA2F7;
+    border: 2px solid #9388A2;
 }
 
 
 .search_btn {
     border: none;
     background: none;
-    background-image: url(../../resources/images/search_btn.png);
+    background-image: url(../../resources/images/search_btn_purple.png);
     background-repeat: no-repeat;
     background-position: center;
     outline-color: transparent;
-    border-color: #7AA2F7;
+    border-color: #9388A2;
     box-shadow: none;
     outline: none;
 }
@@ -387,7 +391,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
-    color: #7AA2F7;
+    color: #9388A2;
     border-color: transparent;
     background: transparent;
     background-repeat: no-repeat;
@@ -402,13 +406,13 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
-    color: rgba(122, 162, 247, 0.5);
+    color: #9388A2;
 }
 
 .create_new_chat_btn {
     border-color: transparent;
     background: transparent;
-    background-image: url(../../resources/images/create.png);
+    background-image: url(../../resources/images/create_purple.png);
     background-repeat: no-repeat;
     background-position: center;
     outline-color: transparent;
@@ -437,7 +441,7 @@
     text-transform: uppercase;
     transition: 0.5s;
     transition-property: box-shadow;
-    background: #7AA2F7;
+    background: #9388A2;
     box-shadow: 0 0 25px #647295;
 }
 
@@ -456,7 +460,7 @@
 /*LOG OUT START*/
 .log_out_box {
     background: #212130;
-    /*border: 1px solid rgba(122, 162, 247, 0.35);*/
+    /*border: 1px solid #8155BA;*/
     border-radius: 20px;
 }
 
@@ -466,7 +470,7 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
-    color: #B1BAE6;
+    color: #E6E6FA;
 }
 
 .yes_btn {
@@ -475,7 +479,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
+    color: #E6E6FA;
     border: 2px solid #434461;
     border-radius: 60px;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
@@ -487,7 +491,7 @@
 }
 
 .yes_btn:hover {
-    color: #B1BAE6;
+    color: #E6E6FA;
     background-color: #434461;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
@@ -504,8 +508,8 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
-    border: 2px solid #13131A;
+    color: #E6E6FA;
+    border: 2px solid #341948;
     border-radius: 60px;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
     background-color: transparent;
@@ -517,8 +521,8 @@
 
 
 .no_btn:hover {
-    color: #B1BAE6;
-    background-color: #13131A;
+    color: #E6E6FA;
+    background-color: #341948;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
 }
@@ -535,8 +539,8 @@
     margin: 47px 0px 48px 0px;
 }
 .achievements_box {
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
@@ -545,7 +549,7 @@
     border-radius: 50%;
     background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/achievements_icon_btn.png);
+    background-image: url(../../resources/images/achievements_icon_btn_purple.png);
     background-color: transparent;
     background-position: center;
     outline-color: transparent;
@@ -557,9 +561,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-size: 1.1em;
-    background: #171717;
+    background: #A16AE8;
     box-shadow: none;
     border: none;
     border-radius: 15px;
@@ -585,12 +589,12 @@
 }
 
 .first_hbox {
-    background: #171722;
+    background: #281437;
 }
 
 .achievement_card {
-    background: #13131A;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #341948;
+    border: 1px solid #8155BA;
     border-radius: 20px;
     transition: border-radius cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
     transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
@@ -603,7 +607,7 @@
 }
 
 .second_hbox {
-    background: #171722;
+    background: #281437;
 }
 /*ACHIEVEMENTS EMD*/
 
@@ -611,8 +615,8 @@
 
 .settings_main_grid {
     margin: 46px 0px 47px 0px;
-    background: #171722;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    background: #281437;
+    border: 1px solid #8155BA;
     border-radius: 20px;
 }
 
@@ -623,14 +627,15 @@
 .settings_grid_for_ico {
     margin: 0px 138px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
     background: none;
 }
 
 .settings_grid_with_ico {
     border-radius: 50%;
+    background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/settings_btn.png);
+    background-image: url(../../resources/images/settings_icon_btn_purple.png);
     background-color: transparent;
     background-position: center;
     outline-color: transparent;
@@ -639,13 +644,13 @@
 
 .settings_grid_with_lab {
     margin: 0px 157px;
-    background: #171717;
+    background: #A16AE8;
     border-radius: 15px;
 }
 
 .settings_lab {
     margin: 5px 55px;
-    color: #B1BAE6;
+    color: #E6E6FA;
     font-family: 'Open Sans';
     font-weight: 400;
     line-height: 30px;
@@ -653,36 +658,36 @@
 }
 
 .settings_grid_with_body {
-    border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #13131A;
+    border: 1px solid #8155BA;
+    background: #341948;
     border-radius: 20px;
 }
 
 .settings_grid_with_color_scheme {
     /*margin: 20px 20px;*/
     border-radius: 20px;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
     margin: 30px 140px 15px 140px;
 }
 
 .settings_first_scheme_btn {
     margin: 10px 21.25px 10px 10.625px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #171722;
+    border: 1px solid #8155BA;
+    background: #281437;
 }
 
 .settings_second_scheme_btn {
     margin: 10px 10.625px 10px 10.625px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #32305f;
+    border: 1px solid #8155BA;
+    background: #341948;
 }
 
 .settings_third_scheme_btn {
     margin: 10px 10.625px 10px 21.25px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 1px solid #8155BA;
     background: blue;
 }
 
