--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -153,7 +153,7 @@
     border-radius: 10px;
     background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/home_btn.svg);
+    background-image: url(../../resources/images/home_btn.png);
     background-color: #4A4A66;
     background-position: center;
     outline-color: transparent;
@@ -406,7 +406,6 @@
 }
 
 .create_new_chat_btn {
-    border-color: transparent;
     background: transparent;
     background-image: url(../../resources/images/create.png);
     background-repeat: no-repeat;
@@ -541,7 +540,7 @@
 }
 
 .achievements_icon_btn {
-    border-color: #0269A4;
+    border-color: transparent;
     border-radius: 50%;
     background: none;
     background-repeat: no-repeat;
@@ -623,14 +622,15 @@
 .settings_grid_for_ico {
     margin: 0px 138px;
     border-radius: 50%;
-    border: 1px solid rgba(122, 162, 247, 0.35);
+    border: 2px solid #7AA2F7;
     background: none;
 }
 
 .settings_grid_with_ico {
     border-radius: 50%;
+    background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/settings_btn.png);
+    background-image: url(../../resources/images/settings_icon_btn.png);
     background-color: transparent;
     background-position: center;
     outline-color: transparent;
@@ -676,7 +676,7 @@
     margin: 10px 10.625px 10px 10.625px;
     border-radius: 50%;
     border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #32305f;
+    background: #341948;
 }
 
 .settings_third_scheme_btn {
