--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -106,6 +106,7 @@
     border-color: transparent;
     box-shadow: none;
 }
+
 /*LOG_IN and REGISTRATION START*/
 
 
@@ -117,6 +118,7 @@
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
+
 /*HOME END*/
 
 
@@ -258,6 +260,7 @@
 .log_out_btn:active {
     transform: scale(0.7);
 }
+
 /*LEFT MENU BAR END*/
 
 
@@ -272,6 +275,7 @@
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
+
 .mini_groups_box {
     margin: 10px 20px;
 }
@@ -450,6 +454,7 @@
 .lets_start:active {
     transform: translateY(-1px);
 }
+
 /*CHATS CONTAINER END*/
 
 /*LOG OUT START*/
@@ -526,6 +531,7 @@
     box-shadow: none;
     transform: translateY(0);
 }
+
 /*LOG OUT END*/
 
 /*ACHIEVEMENTS START*/
@@ -533,6 +539,7 @@
 .achievements_grid {
     margin: 47px 0px 48px 0px;
 }
+
 .achievements_box {
     background: #171722;
     border: 1px solid rgba(122, 162, 247, 0.35);
@@ -591,19 +598,64 @@
     background: #13131A;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
-    transition: border-radius cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
-                 transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+    transition: all 0.5s;
 }
 
 .achievement_card:hover {
-    border-bottom-right-radius: 50px;
-    border-top-left-radius: 50px;
-    transform: scale(1.05);
+    border-color: #008bf8;
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
+
+.achievement_label_text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height */
+
+    color: #B1BAE6;
+}
+
+.achievement_desc_text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    /* identical to box height */
+
+
+    color: #7AA2F7;
+}
+
+.complete_btn {
+    border-color: transparent;
+    background: none;
+    background-repeat: no-repeat;
+    background-image: url(../../resources/images/complete_btn.png);
+    background-color: transparent;
+    background-position: center;
+    outline-color: transparent;
+    box-shadow: none;
+}
+
+.unfinished_btn {
+    border-color: transparent;
+    background: none;
+    background-repeat: no-repeat;
+    background-image: url(../../resources/images/unfinished_btn.png);
+    background-color: transparent;
+    background-position: center;
+    outline-color: transparent;
+    box-shadow: none;
+
 }
 
 .second_hbox {
     background: #171722;
 }
+
 /*ACHIEVEMENTS EMD*/
 
 /*SETTINGS START*/
