--- a/resources/style/dark_theme.css
+++ b/resources/style/dark_theme.css
@@ -1,32 +1,30 @@
-/*LOG_IN and REGISTRATION START*/
-
 .background {
-    background-color: blue;
+    background-color: #000000;
 }
 
 .auth_main_box {
-    background: #212130;
+    background: #18122B;
     border-radius: 20px;
 }
 
 .auth_entry_field {
-    background: #434461;
+    background: #393053;
     border-radius: 60px;
     border-style: solid;
-    border-color: #434461;
+    border-color: #393053;
     outline: none;
     font-family: 'JetBrains Mono';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #6E78A8;
+    color: #635985;
     transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
     box-shadow: 0px 0px 20px -18px;
 }
 
 .auth_entry_field:hover {
-    border: 2px solid #6E78A8;
+    border: 2px solid #635985;
     box-shadow: 0px 0px 20px -17px;
 }
 
@@ -44,11 +42,11 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
-    color: #B1BAE6;
+    color: #635985;
 }
 
 .auth_button {
-    background: #13131A;
+    background: #181D31;
     border-radius: 60px;
     outline: none;
     font-family: 'JetBrains Mono';
@@ -56,7 +54,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
+    color: #635985;
     transition: all 0.3s ease-in-out;
     outline-color: transparent;
     border-color: transparent;
@@ -79,7 +77,7 @@
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
-    color: #B1BAE6;
+    color: #635985;
 }
 
 .auth_sign_button {
@@ -106,6 +104,7 @@
     border-color: transparent;
     box-shadow: none;
 }
+
 /*LOG_IN and REGISTRATION START*/
 
 
@@ -113,10 +112,11 @@
 /*HOME START*/
 .home {
     margin: 46px 0px 47px 0px;
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
+
 /*HOME END*/
 
 
@@ -124,7 +124,7 @@
 /*LEFT MENU BAR START*/
 .left_menu_bar {
     margin: 46px 22px 47px 23px;
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
@@ -153,7 +153,7 @@
     border-radius: 10px;
     background: none;
     background-repeat: no-repeat;
-    background-image: url(../../resources/images/home_btn.svg);
+    background-image: url(../../resources/images/home_btn.png);
     background-color: #4A4A66;
     background-position: center;
     outline-color: transparent;
@@ -258,6 +258,7 @@
 .log_out_btn:active {
     transform: scale(0.7);
 }
+
 /*LEFT MENU BAR END*/
 
 
@@ -268,16 +269,17 @@
 }
 
 .mini_groups_grid {
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
+
 .mini_groups_box {
     margin: 10px 20px;
 }
 
 .mini_chats {
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
@@ -297,14 +299,14 @@
 }
 
 .chat_username {
-    color: #B1BAE6;
+    color: #635985;
     font-family: 'Open Sans';
     font-size: 14px;
     line-height: 24px;
 }
 
 .chat_message {
-    color: #B1BAE6;
+    color: #635985;
     font-family: 'Open Sans';
     font-size: 12px;
     line-height: 24px;
@@ -316,33 +318,33 @@
 
 
 .chats {
-    background: #171722;
+    background: #000000;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
 
 .main_box_style_blurred {
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
     filter: blur(5px);
 }
 
 .current_dirrect_message_box {
-    background: #171722;
+    background: #000000;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
 
 .current_dirrect_message_box_blurred {
-    background: #171722;
+    background: #000000;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
     filter: blur(5px);
 }
 
 .search_bar_grid {
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
@@ -353,7 +355,7 @@
 }
 
 .search_bar_box_blurred {
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
     filter: blur(5px);
@@ -406,7 +408,6 @@
 }
 
 .create_new_chat_btn {
-    border-color: transparent;
     background: transparent;
     background-image: url(../../resources/images/create.png);
     background-repeat: no-repeat;
@@ -443,14 +444,15 @@
 
 .lets_start:hover {
     box-shadow: 0 0 5px #6582C8,
-    0 0 25px #647295,
-    0 0 50px #6582C8,
-    0 0 100px #647295;
+        0 0 25px #647295,
+        0 0 50px #6582C8,
+        0 0 100px #647295;
 }
 
 .lets_start:active {
     transform: translateY(-1px);
 }
+
 /*CHATS CONTAINER END*/
 
 /*LOG OUT START*/
@@ -466,7 +468,7 @@
     font-weight: 400;
     font-size: 30px;
     line-height: 40px;
-    color: #B1BAE6;
+    color: #635985;
 }
 
 .yes_btn {
@@ -475,8 +477,8 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
-    border: 2px solid #434461;
+    color: #635985;
+    border: 2px solid #393053;
     border-radius: 60px;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
     background-color: transparent;
@@ -487,8 +489,8 @@
 }
 
 .yes_btn:hover {
-    color: #B1BAE6;
-    background-color: #434461;
+    color: #635985;
+    background-color: #393053;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
 }
@@ -504,8 +506,8 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
-    color: #B1BAE6;
-    border: 2px solid #13131A;
+    color: #635985;
+    border: 2px solid #181D31;
     border-radius: 60px;
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
     background-color: transparent;
@@ -517,8 +519,8 @@
 
 
 .no_btn:hover {
-    color: #B1BAE6;
-    background-color: #13131A;
+    color: #635985;
+    background-color: #181D31;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
 }
@@ -527,6 +529,7 @@
     box-shadow: none;
     transform: translateY(0);
 }
+
 /*LOG OUT END*/
 
 /*ACHIEVEMENTS START*/
@@ -534,14 +537,15 @@
 .achievements_grid {
     margin: 47px 0px 48px 0px;
 }
+
 .achievements_box {
-    background: #171722;
+    background: #000000;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
 
 .achievements_icon_btn {
-    border-color: #0269A4;
+    border-color: transparent;
     border-radius: 50%;
     background: none;
     background-repeat: no-repeat;
@@ -557,7 +561,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 30px;
-    color: #B1BAE6;
+    color: #635985;
     font-size: 1.1em;
     background: #171717;
     box-shadow: none;
@@ -572,46 +576,91 @@
     border-radius: 15px;
     transform: translateY(-10px);
     box-shadow: 0 15px 0 -4px #39a2db,
-    0 16px 10px -3px #39a2db,
-    0 7px 0 -2px #EEEEFF;
+        0 16px 10px -3px #39a2db,
+        0 7px 0 -2px #EEEEFF;
 }
 
 .achievements_label_btn:active {
     transition: all 0.2s;
     transform: translateY(-5px);
     box-shadow: 0 2px 0 -2px #EEEEFF,
-    0 8px 0 -4px #39a2db,
-    0 12px 10px -3px #39a2db;
+        0 8px 0 -4px #39a2db,
+        0 12px 10px -3px #39a2db;
 }
 
 .first_hbox {
-    background: #171722;
+    background: #000000;
 }
 
 .achievement_card {
-    background: #13131A;
+    background: #181D31;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
-    transition: border-radius cubic-bezier(0.075, 0.82, 0.165, 1) 1s,
-    transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+    transition: all 0.5s;
 }
 
 .achievement_card:hover {
-    border-bottom-right-radius: 50px;
-    border-top-left-radius: 50px;
-    transform: scale(1.05);
+    border-color: #008bf8;
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+}
+
+.achievement_label_text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    /* identical to box height */
+
+    color: #635985;
+}
+
+.achievement_desc_text {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    /* identical to box height */
+
+
+    color: #7AA2F7;
+}
+
+.complete_btn {
+    border-color: transparent;
+    background: none;
+    background-repeat: no-repeat;
+    background-image: url(../../resources/images/complete_btn.png);
+    background-color: transparent;
+    background-position: center;
+    outline-color: transparent;
+    box-shadow: none;
+}
+
+.unfinished_btn {
+    border-color: transparent;
+    background: none;
+    background-repeat: no-repeat;
+    background-image: url(../../resources/images/unfinished_btn.png);
+    background-color: transparent;
+    background-position: center;
+    outline-color: transparent;
+    box-shadow: none;
+
 }
 
 .second_hbox {
-    background: #171722;
+    background: #000000;
 }
+
 /*ACHIEVEMENTS EMD*/
 
 /*SETTINGS START*/
 
 .settings_main_grid {
     margin: 46px 0px 47px 0px;
-    background: #171722;
+    background: #000000;
     border: 1px solid rgba(122, 162, 247, 0.35);
     border-radius: 20px;
 }
@@ -646,7 +695,7 @@
 
 .settings_lab {
     margin: 5px 55px;
-    color: #B1BAE6;
+    color: #635985;
     font-family: 'Open Sans';
     font-weight: 400;
     line-height: 30px;
@@ -655,7 +704,7 @@
 
 .settings_grid_with_body {
     border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #13131A;
+    background: #181D31;
     border-radius: 20px;
 }
 
@@ -670,21 +719,21 @@
     margin: 10px 21.25px 10px 10.625px;
     border-radius: 50%;
     border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #171722;
+    background: #000000;
 }
 
 .settings_second_scheme_btn {
     margin: 10px 10.625px 10px 10.625px;
     border-radius: 50%;
     border: 1px solid rgba(122, 162, 247, 0.35);
-    background: #32305f;
+    background: #341948;
 }
 
 .settings_third_scheme_btn {
     margin: 10px 10.625px 10px 21.25px;
     border-radius: 50%;
     border: 1px solid rgba(122, 162, 247, 0.35);
-    background: blue;
+    background: black;
 }
 
 /*SETTINGS END*/
