--- a/resources/style/theme.css
+++ b/resources/style/theme.css
@@ -656,6 +656,11 @@
     background: #171722;
 }
 
+.scrollbar {
+    background: #13131A;
+    border-radius: 10px;
+}
+
 /*ACHIEVEMENTS EMD*/
 
 /*SETTINGS START*/
@@ -735,7 +740,24 @@
     margin: 10px 10.625px 10px 21.25px;
     border-radius: 50%;
     border: 1px solid rgba(122, 162, 247, 0.35);
-    background: blue;
+    background: black;
 }
 
 /*SETTINGS END*/
+
+
+.choose_profile_avatar_btn {
+    border-color: transparent;
+    border-radius: 50%;
+    background: none;
+    background-repeat: no-repeat;
+    background-image: url(../../resources/images/choose_profile_avatar_btn.png);
+    background-color: transparent;
+    background-position: center;
+    outline-color: transparent;
+    box-shadow: none;
+}
+
+.level_box {
+    background: #13131A;
+}
